fixed spacing for everything

--- a/website_test/Style.css
+++ b/website_test/Style.css
@@ -1,9 +1,11 @@
- html,body {
+html {
     height: 100%;
     width: 100%;
-    background-image: url(./website_pics/waves.jpg);
+}
+body {
+    background-image: url(./website_pics/background5.jpg);
     background-repeat: no-repeat;
-    background-size: cover;
+    background-size: 140%;
  }
 h1 {
     margin-left: auto;
@@ -12,22 +14,23 @@ h1 {
     font-family:'Courier New', Courier, monospace;
 }
 h2 {
-    color: darkcyan;
     font-family:'Courier New', Courier, monospace;
     padding-bottom: 30px;
     padding-right: 20px;
 }
 button {
-    font-size: 1.4em;
-    font-family: monospace;
-    background-color: white;
-    text-align: center;
-    border-radius: 3px;
-    padding: 5px;
+    background-color: azure;
+    padding: 8px;
     margin: 10px;
+    text-align: center;
+    font-family: 'Garamond',monospace;
+    background-color: azure;
+    border: 1px black solid;
+    font-size: 1.4em;
+    height: max-content;
 }
 p { 
-    font-size: 1.4em;
+    font-size: 1.5em;
     font-family: monospace;
 }
 #everythingContainer {
@@ -38,16 +41,16 @@ p {
 #textContainer {
     width: 500px;
     text-align: center;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
 }
 #asurroundingText {
     font-family: 'Garamond',monospace;
+    font-size: 1.4em;
 }
-.storyButtons {
-    font-family: 'Garamond',monospace;
-    background-color: azure;
-    border: none;
-    padding: 20px;
-}
+
 #map { /*place beside grid*/
     display: none;
     z-index: 2;
@@ -58,8 +61,9 @@ p {
 /***************CENTER***************/
 #buttonsContainer {
     display: flex;
-    margin-left: auto;
+    margin-left: auto; 
     margin-right: auto;
+    margin-top: 20px;
     justify-content: center;
 }
 .overlayGrid {
@@ -110,7 +114,7 @@ p {
     flex-flow: column wrap; /*three rows*/
     justify-content: center;
     align-content: center;
-    height: 510px; /*total size of grid, accounting for border*/
+    height: 510px;
     width: 350px;
 }
 .gridImage { /*Make barrels and islands small*/
@@ -133,8 +137,10 @@ p {
 }
 
 /*Erase top and bottom middle grid borders*/
-#gridTop {border-top: 0px;}
-#gridBottom {border-bottom: 0px;}
+.gridTop {border-top: 0px;}
+.gridBottom {border-bottom: 0px;}
+.gridLeft {border-left: 0px;}
+.gridRight {border-right: 0px;}
 
 
 /***********************RIGHT***********************/
@@ -153,7 +159,6 @@ p {
     display: none;
     width: 300px;
     height: 510px;
-
     flex-wrap: wrap;
     align-content: flex-start;
     align-items: center;
@@ -164,13 +169,14 @@ p {
 #inv1Header {
     display: flex;
 }
-#unitsContainer {
+#unitsContainer,#resourcePicsContainer {
     display: flex;
+    justify-content: space-around;
 }
-.middleUnits {
+/* .middleUnits {
     padding-left: 20px;
     padding-right: 20px;
-}
+} */
 #chest {
     width: 150px;
     padding-top: 30px;
@@ -190,4 +196,11 @@ p {
     position: absolute;
     top: 30px;
     right: 30px;
+}
+
+/***********************BOTTOM***********************/
+
+#sailButton, #mapButton {
+    font-size: 1.5em;
+    font-family: monospace;
 }
